[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
logos = "0.15.0"
regex = "1.11.1"
itertools = "0.13.0"
counter = "0.6.0"
derive_more = { version = "1.0.0", features = ["try_into"] }
lazy_static = "1.5.0"
bitvec = "1.0.1"
genawaiter = "0.99.1"
